--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,9 @@
       "symfony/http-foundation": "~2.6",
       "pimple/pimple": "~3.0"
     },
+    "require-dev": {
+      "phpunit/phpunit": "^4.8.6",
+      "mockery/mockery": "^0.9.4"
+    },
     "minimum-stability": "dev"
 }
