--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
       "phpunit/phpunit": "^4.8.6",
-      "mockery/mockery": "^0.9.4"
+      "mockery/mockery": "^0.9.4",
+      "wp-cli/wp-cli": "^0.21"
     },
     "minimum-stability": "dev"
 }
