--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "require-dev": {
       "phpunit/phpunit": "^4.8.6",
       "mockery/mockery": "^0.9.4",
+      "php-mock/php-mock-phpunit": "*",
+      "php-mock/php-mock-mockery": "*",
       "wp-cli/wp-cli": "^0.21"
     },
     "minimum-stability": "dev"
